--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -255,7 +255,7 @@
 <!ENTITY Ctr_icopageinfo	"Ein Klick auf das Symbol öffnet das 'Seiteninfo'-Fenster">
 <!ENTITY Ctr_lbsbsize		"Benutzerdefinierte Breite für die Adressleiste und die Suchleiste">
 <!ENTITY Ctr_searchbar		"Suchleiste">
-<!ENTITY Ctr_lbsugresi		"Vorschläge im Aufklappmenü ohne Bildlaufleiste anzeigen (wenn möglich)">
+<!ENTITY Ctr_lbsugresi		"Vorschläge im Aufklappmenü ohne Bildlaufleiste anzeigen (falls möglich)">
 <!ENTITY Ctr_lbsugres		"Anzahl der Vorschläge im Aufklappmenü (about:config-Einstellung)">
 
 <!ENTITY Ctr_menubar_items	"Position der Menüeinträge">
