--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -71,7 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"Απόκρυψη για μόνο μία ορατή καρτέλα">
 <!ENTITY Ctr_closei_def		"Προεπιλεγμένα εικονίδια">
 <!ENTITY Ctr_closeonleft	"Εναλλακτική θέση στην καρτέλα">
-<!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
+<!ENTITY Ctr_closetabbig	"Μεγαλύτερο εικονίδιο (20x20 px)">
 <!ENTITY Ctr_close_wwltab	"Κλείσιμο παραθύρου κλείνοντας την τελευταία ορατή καρτέλα (προτίμηση «about:config»)">
 
 <!ENTITY Ctr_hctpinfotab	"Κάποιες παραλλαγές καρτελών δεν είναι συμβατές με την επέκταση «Hide Caption Titlebar Plus».">
@@ -84,8 +84,8 @@
 <!ENTITY Ctr_appbutton2		"Στη γραμμή τίτλου του [&brandShortName;]">
 <!ENTITY Ctr_appbutton2h	"Στη γραμμή τίτλου του [&brandShortName;] (σε απόκρυψη)">
 <!ENTITY Ctr_appbutton2io	"Στη γραμμή τίτλου του [&brandShortName;] (μόνο εικονίδιο)">
-<!ENTITY Ctr_paneluibtweak	"Εμφάνιση κουμπιού μενού ως κουμπί &brandShortName;…">
-<!ENTITY Ctr_paneluibtweak2	"Εμφάνιση κουμπιού μενού ως κουμπί &brandShortName; (μόνο εικονίδιο)…">
+<!ENTITY Ctr_paneluibtweak	"Εμφάνιση κουμπιού-μενού ως κουμπί &brandShortName;…">
+<!ENTITY Ctr_paneluibtweak2	"Εμφάνιση κουμπιού-μενού ως κουμπί &brandShortName; (μόνο εικονίδιο)…">
 <!ENTITY Ctr_paneluibtweak3	"…όταν βρίσκεται στην εργαλειοθήκη καρτελών">
 <!ENTITY Ctr_appbuttonc_o	"Πορτοκαλί χρώμα κουμπιού (προεπιλογή)">
 <!ENTITY Ctr_appbuttonc_a	"Μπλε χρώμα κουμπιού (Aurora)">
@@ -171,13 +171,13 @@
 <!ENTITY Ctr_am_compact		"Λίστες πρόσθετων: συμπαγής προβολή">
 <!ENTITY Ctr_am_compact2	"Συμπαγής προβολή +">
 <!ENTITY Ctr_am_highlight	"Λίστες πρόσθετων: επισήμανση καταχώρισης κατά την κατάδειξη">
-<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
-<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
+<!ENTITY Ctr_am_buticons	"Λίστες πρόσθετων: αντικατάσταση ετικετών κουμπιών με εικονίδια">
+<!ENTITY Ctr_am_hovshowb	"Λίστες πρόσθετων: εμφάνιση κουμπιών μόνο κατά την κατάδειξη">
 <!ENTITY Ctr_addonversion	"Λίστες πρόσθετων: εμφάνιση έκδοσης πρόσθετου">
 <!ENTITY Ctr_xpinstallui	"Παλιό παράθυρο εγκατάστασης πρόσθετων (προτίμηση «about:config»)">
-<!ENTITY Ctr_bmbutton		"Κουμπί μενού σελιδοδεικτών">
-<!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
-<!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
+<!ENTITY Ctr_bmbutton		"Κουμπί-μενού σελιδοδεικτών">
+<!ENTITY Ctr_hiderecentbm	"Αναδυόμενο σελιδοδεικτών: απόκρυψη πρόσφατα προστεθέντων σελιδοδεικτών">
+<!ENTITY Ctr_hideeditbm		"Αστέρι σελιδοδεικτών: απόκρυψη αναδυόμενου (αν η σελίδα δεν είναι στους σελιδοδείκτες)">
 <!ENTITY Ctr_bmbutpanelm	"Αναδυόμενο: εμφάνιση ως μενού πίνακα">
 <!ENTITY Ctr_bmbunsortbm	"Αναδυόμενο: υπομενού «Αταξινόμητοι σελιδοδείκτες»">
 <!ENTITY Ctr_bmbunsortbm2	"Πάνω από τους σελιδοδείκτες">
@@ -228,7 +228,7 @@
 
 <!ENTITY Ctr_urlbar			"Γραμμή τοποθεσιών">
 <!ENTITY Ctr_starinurl		"Κουμπί-αστέρι">
-<!ENTITY Ctr_starinurlinfo	"Το προεπιλεγμένο κουμπί μενού σελιδοδεικτών αποκρύπτεται">
+<!ENTITY Ctr_starinurlinfo	"Το προεπιλεγμένο κουμπί-μενού σελιδοδεικτών αποκρύπτεται">
 <!ENTITY Ctr_feedinurl		"Κουμπί «Συνδρομή» (RSS)">
 <!ENTITY Ctr_hideurelstop	"Απόκρυψη κουμπιών «Διακοπή» &amp; «Ανανέωση»">
 <!ENTITY Ctr_hideurelstop2	"Πάντα εμφάνιση του κουμπιού «Μετάβαση»">
@@ -238,13 +238,13 @@
 <!ENTITY Ctr_urlbardropm2	"Να είναι πάντα ορατός ο δείκτης ανάπτυξης">
 <!ENTITY Ctr_altreaderico	"Εναλλακτικά εικονίδια «λειτουργίας ανάγνωσης»">
 <!ENTITY Ctr_hideprbutton	"Απόκρυψη εικονιδίου ειδοποίησης φραγής αναδυόμενου παραθύρου">
-<!ENTITY Ctr_urlbar_uc		"Disable 'Unified autocomplete' feature (about:config preference)">
+<!ENTITY Ctr_urlbar_uc		"Απενεργοποίηση χαρακτηριστικού ενιαίας αυτόματης συμπλήρωσης (προτίμηση «about:config»)">
 <!ENTITY Ctr_locsearchbw10	"Μείωση ύψους γραμμών τοποθεσιών και αναζήτησης (πειραματικό)">
 <!ENTITY Ctr_urlbar_ib		"Κουμπί ταυτοποίησης τοποθεσιών (πλαίσιο ταυτοποίησης)">
 <!ENTITY Ctr_ib_nohovcolor	"Μη εμφάνιση γκρι χρώματος κατά την κατάδειξη">
 <!ENTITY Ctr_ib_graycolor	"Γκρι χρώμα για αγνώστου ταυτότητας και «Chrome» σελίδες">
 <!ENTITY Ctr_verifiedcolors	"Χρώματα κουμπιού για επαληθευμένες ιστοσελίδες, ασφαλείς και μη ασφαλείς συνδέσεις">
-<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
+<!ENTITY Ctr_ibinfoico		"Αντικατάσταση εικονιδίου «i» με εικονίδιο υδρογείου">
 <!ENTITY Ctr_faviconurl		"Εικονίδιο URL: τρέχον εικονίδιο τοποθεσιών">
 <!ENTITY Ctr_padlock		"Εικονίδιο «Λουκέτο» για ασφαλείς συνδέσεις">
 <!ENTITY Ctr_padlock_hid	"κρυμμένο">
@@ -371,7 +371,7 @@
 <!ENTITY appMenuGettingStarted.label	"Ξεκινώντας">
 <!ENTITY goCmd.label					"Μετάβαση">
 <!ENTITY Ctr_menu_restart.label			"Επανεκκίνηση">
-<!ENTITY Ctr_restartapp					"«Επανεκκίνηση» στα μενού κουμπιού εφαρμογής και «Αρχείο»">
+<!ENTITY Ctr_restartapp					"«Επανεκκίνηση» στα μενού κουμπιού &brandShortName; και «Αρχείο»">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"Π">
