--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -159,8 +159,8 @@
 <!ENTITY Ctr_cpanelmenus	"Menús tipo panel (botones de Historial, triple-barra, etc.): Vista compacta">
 <!ENTITY Ctr_hidezoomres	"Controles de zoom en la barra de herramientas: Ocultar botón de restablecimiento del zoom">
 <!ENTITY Ctr_alt_newtabp	"Página de nueva pestaña (about:newtab): Apariencia alternativa">
-<!ENTITY Ctr_ctroldsearch	"Menú antiguo del recuadro de búsqueda">
-<!ENTITY Ctr_ctroldsearchc	"Limpiar recuadro de búsqueda después de buscar">
+<!ENTITY Ctr_ctroldsearch	"Menú antiguo de la barra de búsqueda">
+<!ENTITY Ctr_ctroldsearchc	"Limpiar barra de búsqueda después de buscar">
 <!ENTITY Ctr_search_oit		"Abrir búsqueda en una nueva pestaña (about:config >> browser.search.openintab)">
 <!ENTITY Ctr_osearch_meoit	"Clic con el botón central: Busca en una nueva 'pestaña en primer plano'">
 <!ENTITY Ctr_osearch_dm		"Flecha de desplegable pequeña">
@@ -177,7 +177,7 @@
 <!ENTITY Ctr_xpinstallui	"Antiguo diálogo de instalación (about:config >> xpinstall.customConfirmationUI)">
 <!ENTITY Ctr_bmbutton		"Botón de menú emergente de Marcadores">
 <!ENTITY Ctr_hiderecentbm	"Menú emergente de Marcadores: Ocultar marcadores añadidos recientemente">
-<!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
+<!ENTITY Ctr_hideeditbm		"Estrella de marcadores: Ocultar panel emergente (si la página no está en marcadores)">
 <!ENTITY Ctr_bmbutpanelm	"Estilo de panel para el menú emergente ">
 <!ENTITY Ctr_bmbunsortbm	"Mostrar submenú 'Marcadores no ordenados'">
 <!ENTITY Ctr_bmbunsortbm2	"Menú por encima de los marcadores">
@@ -238,8 +238,8 @@
 <!ENTITY Ctr_urlbardropm2	"Hacer siempre visible la flecha de despliegue">
 <!ENTITY Ctr_altreaderico	"Iconos de 'Vista de lectura' alternativos">
 <!ENTITY Ctr_hideprbutton	"Ocultar icono de notificación cuando se bloquee una ventana emergente">
-<!ENTITY Ctr_urlbar_uc		"Disable 'Unified autocomplete' feature (about:config preference)">
-<!ENTITY Ctr_locsearchbw10	"Reducir altura de la barra de direcciones y el recuadro de búsqueda (experimental)">
+<!ENTITY Ctr_urlbar_uc		"Deshabilitar 'Autocompletado unificado' (about:config >> browser.urlbar.unifiedcomplete)">
+<!ENTITY Ctr_locsearchbw10	"Reducir altura de la barra de direcciones y la barra de búsqueda (experimental)">
 <!ENTITY Ctr_urlbar_ib		"Botón de identidad del sitio (recuadro de identidad)">
 <!ENTITY Ctr_ib_nohovcolor	"No mostrar color gris al señalarlo">
 <!ENTITY Ctr_ib_graycolor	"Color gris para identidades desconocidas y páginas chrome://">
@@ -253,8 +253,8 @@
 <!ENTITY Ctr_padlock_mod	"moderno">
 <!ENTITY Ctr_padlock_ext	"Icono de '&brandShortName;' para páginas about: válidas">
 <!ENTITY Ctr_icopageinfo	"Hacer clic en el icono abre la ventana 'Información de la página'">
-<!ENTITY Ctr_lbsbsize		"Ancho personalizado para barra de direcciones y recuadro de búsqueda">
-<!ENTITY Ctr_searchbar		"Recuadro de búsqueda">
+<!ENTITY Ctr_lbsbsize		"Ancho personalizado para barra de direcciones y barra de búsqueda">
+<!ENTITY Ctr_searchbar		"Barra de búsqueda">
 <!ENTITY Ctr_lbsugresi		"Mostrar máximo de resultados (sin barra de desplazamiento) en el menú de sugerencias">
 <!ENTITY Ctr_lbsugres		"Resultados menú de sugerencias (about:config >> browser.urlbar.maxRichResults)">
 
@@ -342,7 +342,7 @@
 <!ENTITY Ctr_fx38reader		"Desmarcar esto deshabilita la 'vista de lectura' y elimina su icono de la barra de direcciones.">
 <!ENTITY Ctr_fx38pocket		"Desmarcar esto deshabilita el servicio de guardado 'Pocket' y elimina su botón.">
 <!ENTITY Ctr_fx38pocket2	"Hacerlo con el botón 'Pocket' en 'Personalizar' elimina sus menús en marcadores y vista de lectura.">
-<!ENTITY Ctr_e_searchui		"Aspecto del recuadro de búsqueda">
+<!ENTITY Ctr_e_searchui		"Aspecto de la barra de búsqueda">
 <!ENTITY Ctr_e_loop			"Llamada y conversación / Loop">
 <!ENTITY Ctr_e_deved		"Tema decorativo de la edición de desarrollador">
 <!ENTITY Ctr_e_prefsui		"Preferencias en pestaña">
