--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -177,7 +177,7 @@
 <!ENTITY Ctr_xpinstallui	"Vana lisade paigaldamise aken (about:config eelistus)">
 <!ENTITY Ctr_bmbutton		"Järjehoidjate menüü nupp">
 <!ENTITY Ctr_hiderecentbm	"Järjehoidjate hüpik: Peida viimati lisatud järjehoidjad">
-<!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
+<!ENTITY Ctr_hideeditbm		"Järjehoidjate täht: peida hüpik (kui leht pole järjehoidjates)">
 <!ENTITY Ctr_bmbutpanelm	"Menüühüpik: paneelimenüü välimus">
 <!ENTITY Ctr_bmbunsortbm	"Menüühüpik: alammenüü 'Sortimata järjehoidjad'">
 <!ENTITY Ctr_bmbunsortbm2	"Menüü järjehoidjate kohal">
@@ -238,7 +238,7 @@
 <!ENTITY Ctr_urlbardropm2	"Tee rippmenüü avamise nupp alati nähtavaks">
 <!ENTITY Ctr_altreaderico	"Alternatiivsed 'Lugemisvaate' ikoonid">
 <!ENTITY Ctr_hideprbutton	"Peida blokeeritud hüpikakende teavitusikoon">
-<!ENTITY Ctr_urlbar_uc		"Disable 'Unified autocomplete' feature (about:config preference)">
+<!ENTITY Ctr_urlbar_uc		"Keela ühendatud automaatlõpetamise funktsioon 'Unified autocomplete' (about:config eelistus)">
 <!ENTITY Ctr_locsearchbw10	"Vähenda aadressiriba ja otsinguriba kõrgust (katsejärgus)">
 <!ENTITY Ctr_urlbar_ib		"Saidi identiteedi nupp (identiteedi kast)">
 <!ENTITY Ctr_ib_nohovcolor	"Hiirekursoriga ikooni peale minnes ära näita halli taustavärvi">
@@ -330,7 +330,7 @@
 <!ENTITY Ctr_puictrbutton	"Nupp peamise paneeli menüüs">
 
 <!ENTITY Ctr_otherctroptns	"Muud sätted">
-<!ENTITY Ctr_cuibotbuttons	"Lisanupud kohandamise režiimis">
+<!ENTITY Ctr_cuibotbuttons	"Lisanupud menüüde ja tööriistaribade kohandamise režiimis">
 <!ENTITY Ctr_nodevtheme		"Ära luba 'Arendaja väljalaske välimust' sisse lülitada">
 
 <!ENTITY Ctr_experttweaks	"Täpsemad">
@@ -341,7 +341,7 @@
 <!ENTITY Ctr_fx36prefs2		"Märkus: Vana eelistuste aken ei sisalda kõiki hiljuti lisatud brauseri eelistusi!">
 <!ENTITY Ctr_fx38reader		"Sellelt eelistuselt märke eemaldamine keelab 'lugemisvaate' funktsiooni ja eemaldab aadressiribalt selle ikooni.">
 <!ENTITY Ctr_fx38pocket		"Sellelt eelistuselt märke eemaldamine keelab 'Pocket' funktsiooni ja eemaldab selle nupu tööriistaribadelt.">
-<!ENTITY Ctr_fx38pocket2	"Märkus: Enne selle eelistuse keelamist 'Pocket'-nupu 'kohandamise aknasse' liigutamine eemaldab järjehoidjate ja lugemisnimekirja menüüdest ka kirjed 'Pocket'.">
+<!ENTITY Ctr_fx38pocket2	"Märkus: Enne selle eelistuse keelamist 'Pocket'-nupu 'kohandamise aknasse' liigutamine eemaldab järjehoidjate ja lugemisnimekirja menüüdest ka kõik funktsiooniga 'Pocket' seotud kirjed.">
 <!ENTITY Ctr_e_searchui		"Otsingu välimus">
 <!ENTITY Ctr_e_loop			"Helistamine ja vestlus / Loop">
 <!ENTITY Ctr_e_deved		"Arendaja väljalaske välimus">
