--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -55,8 +55,8 @@
 <!ENTITY Ctr_tabwidthinfo2	"Širino zavihkov nadzira TabUtilities">
 <!ENTITY Ctr_tabwidthinfo3	"Vrednosti pod 48 sl. točk bodo v večini premerov povzročile napake!">
 <!ENTITY Ctr_square_edges	"Kvadratasti zgornji koti">
-<!ENTITY Ctr_tttitlebar		"Naziv zavihka v nazivni vrstici &brandShortName;">
-<!ENTITY Ctr_tabinsertion	"Vstavi odprti zavihek poleg trenutnega (možnost about:config)">
+<!ENTITY Ctr_tttitlebar		"Naziv zavihka v nazivni vrstici &brandShortName;a">
+<!ENTITY Ctr_tabinsertion	"Vstavi odprt zavihek poleg trenutnega (možnost about:config)">
 <!ENTITY Ctr_emptytfavico	"Prikaži zaznamko (če je stran ne dobavi)">
 <!ENTITY Ctr_emptytfavico_n	"Brez">
 <!ENTITY Ctr_emptytfavico_g	"Splošno">
@@ -125,7 +125,7 @@
 <!ENTITY Ctr_altoptionsw	"Odpri stran z možnostmi v oknu">
 <!ENTITY Ctr_altoptionsww	"Širina">
 <!ENTITY Ctr_altoptionswh	"Višina">
-<!ENTITY Ctr_altoptionsi	"Simulirano okno možnosti ni več pogovorno okno, ampak 'okno brskalnika' s skritimi orodnimi vrsticami. Značilnost 'Uporabi trenutno stran' samo doda v trenutnem oknu odprte url-je strani, ki je v tem primeru samo 'about:preferences'. Gumb orodne vrstice 'možnosti' se nadomesti z novim, da se lahko možnosti odprejo v oknu.">
+<!ENTITY Ctr_altoptionsi	"Simulirano okno možnosti ni več pogovorno okno, ampak 'okno brskalnika' s skritimi orodnimi vrsticami. Značilnost 'Uporabi trenutno stran' samo doda v trenutnem oknu odprte URL-je strani, ki je v tem primeru samo 'about:preferences'. Gumb orodne vrstice 'možnosti' se nadomesti z novim, da se lahko možnosti odprejo v oknu.">
 <!ENTITY Ctr_options_rem	"Zapomni si nazadnje izbrano kategorijo">
 <!ENTITY Ctr_svgfilters		"Barve SVG za privzete ikone gumbov orodne vrstice">
 <!ENTITY Ctr_wincontrols	"Premakljive nadzorne tipke celozaslonskega okna">
@@ -167,7 +167,7 @@
 <!ENTITY Ctr_addonmanager	"Upravitelj dodatkov">
 <!ENTITY Ctr_alt_addonsp	"Stran dodatkov 'Več': nadomestni videz">
 <!ENTITY Ctr_alt_addonsm	"Nadomestni videz">
-<!ENTITY Ctr_am_nowarning	"Seznami dodatkov Upravitelja dodatkov: skrij opozorila">
+<!ENTITY Ctr_am_nowarning	"Seznami dodatkov: skrij opozorila">
 <!ENTITY Ctr_am_compact		"Seznami dodatkov: strnjen pogled">
 <!ENTITY Ctr_am_compact2	"Strnjen pogled +">
 <!ENTITY Ctr_am_highlight	"Seznami dodatkov: poudari vnos ob prehodu z miško">
@@ -179,10 +179,10 @@
 <!ENTITY Ctr_hiderecentbm	"Pojavno okno zaznamkov: skrij nedavno dodane zaznamke">
 <!ENTITY Ctr_hideeditbm		"Zvezdica za zaznamke: skrij pojavno okno (če stran ni dodana med zaznamke)">
 <!ENTITY Ctr_bmbutpanelm	"Pojavna okna: videz ploščastega menija">
-<!ENTITY Ctr_bmbunsortbm	"Pojavna okna: podmeni 'nerazvrščeni zaznamki'">
+<!ENTITY Ctr_bmbunsortbm	"Pojavna okna: podmeni 'Nerazvrščeni zaznamki'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad zaznamki">
 <!ENTITY Ctr_bmbviewbmtb	"Pojavna okna: prikaži 'Orodno vrstico pogledov'">
-<!ENTITY Ctr_bmbnounsort	"Pojavna okna: skrij 'nerazvrščeni zaznamki'">
+<!ENTITY Ctr_bmbnounsort	"Pojavna okna: skrij 'Nerazvrščeni zaznamki'">
 <!ENTITY Ctr_bmbutnotext	"Skrij oznako na vrstici zaznamkov">
 <!ENTITY Ctr_skipprintpr	"Gumb Natisni: preskoči predogled tiskanja">
 <!ENTITY Ctr_tbconmenu		"Vsebinski meni orodne vrstice: skrij 'Premakni v meni', 'Odstrani iz orodne vrstice', 'Ponovno naloži vse zavihke', 'Dodaj vse zavihke med zaznamke' in 'Ponovno odpri zavihek'">
@@ -198,8 +198,8 @@
 <!ENTITY Ctr_tabmokcolor2	"Bela barva in temna senca besedila nedejavnih zavihkov">
 <!ENTITY Ctr_tabmokcolor4	"Bela barva pikčaste prazne zaznamke zavihka">
 
-<!ENTITY Ctr_navthrobber1	"Klik na kazalnik dejavnosti odpre naslednji url v novem zavihku:">
-<!ENTITY Ctr_navthrobber2	"Dodajte url ali pustite prazno">
+<!ENTITY Ctr_navthrobber1	"Klik na kazalnik dejavnosti odpre naslednji URL v novem zavihku:">
+<!ENTITY Ctr_navthrobber2	"Dodajte URL ali pustite prazno">
 <!ENTITY Ctr_anewtaburl		"URL strani novega zavihka">
 <!ENTITY Ctr_anewtaburlcb	"URL strani novega zavihka po meri (privzeto: 'about:newtab')">
 
@@ -234,7 +234,7 @@
 <!ENTITY Ctr_hideurelstop2	"Vedno prikaži gumb 'Pojdi'">
 <!ENTITY Ctr_hideurlgo		"Skrij gumb 'Pojdi'">
 <!ENTITY Ctr_hideurlsrg		"Skrij ločila in presledke gumbov 'Ponovno naloži, Ustavi in Pojdi'">
-<!ENTITY Ctr_urlbardropm	"Premakni spustno oznako na zadnji možni položaj">
+<!ENTITY Ctr_urlbardropm	"Premakni spustno puščico na zadnji možni položaj">
 <!ENTITY Ctr_urlbardropm2	"Naj bo spustna puščica vedno vidna">
 <!ENTITY Ctr_altreaderico	"Nadomestne ikone 'Bralnika'">
 <!ENTITY Ctr_hideprbutton	"Skrij ikono obvestil ob blokiranju pojavnega okna">
@@ -252,7 +252,7 @@
 <!ENTITY Ctr_padlock_cla	"klasična">
 <!ENTITY Ctr_padlock_mod	"sodobna">
 <!ENTITY Ctr_padlock_ext	"Ikona '&brandShortName;' za veljavne strani 'about'">
-<!ENTITY Ctr_icopageinfo	"Klik na ikono odpre okno 'Podatkov o strani'">
+<!ENTITY Ctr_icopageinfo	"Klik na ikono odpre okno 'Podatki o strani'">
 <!ENTITY Ctr_lbsbsize		"Prilagodljiva širina naslovne in iskalne vrstice">
 <!ENTITY Ctr_searchbar		"Iskalna vrstica">
 <!ENTITY Ctr_lbsugresi		"Prikaži največje možno število predlogov v pojavnem oknu (brez drsnika)">
