--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -245,6 +245,8 @@
 <!ENTITY Ctr_ib_graycolor	"Šedá barva pro neznámou identitu a stránky chrome">
 <!ENTITY Ctr_verifiedcolors	"Barvy tlačítka pro ověřené stránky, zabezpečené a nezabezpečené připojení">
 <!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
+<!ENTITY Ctr_ibinfoico2		"Hide 'i'-icon (if possible)">
+<!ENTITY Ctr_iblabels		"Hide labels">
 <!ENTITY Ctr_faviconurl		"Favicona">
 <!ENTITY Ctr_padlock		"Zámek">
 <!ENTITY Ctr_padlock_hid	"skrytý">
@@ -252,7 +254,7 @@
 <!ENTITY Ctr_padlock_cla	"klasický">
 <!ENTITY Ctr_padlock_mod	"moderní">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;' ikona pro validní chrome stránky">
-<!ENTITY Ctr_icopageinfo	"Klik na ikonu otevře okno 'informace o stránce'">
+<!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
 <!ENTITY Ctr_lbsbsize		"Volitelná šířka pro adresní řádek a vyhledávač">
 <!ENTITY Ctr_searchbar		"Vyhledávač">
 <!ENTITY Ctr_lbsugresi		"Zobrazit počet možných návrhů (bez posuvníku)">
