--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -245,6 +245,8 @@
 <!ENTITY Ctr_ib_graycolor	"Grå farve for ukendt identitet og chrome-sider">
 <!ENTITY Ctr_verifiedcolors	"Knapfarver for bekræftede websteder, sikre og ikke-sikre forbindelser">
 <!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
+<!ENTITY Ctr_ibinfoico2		"Hide 'i'-icon (if possible)">
+<!ENTITY Ctr_iblabels		"Hide labels">
 <!ENTITY Ctr_faviconurl		"Favicon: nuværende webstedsikon">
 <!ENTITY Ctr_padlock		"Hængelås ikon for sikre forbindelser">
 <!ENTITY Ctr_padlock_hid	"skjul">
@@ -252,7 +254,7 @@
 <!ENTITY Ctr_padlock_cla	"klassik">
 <!ENTITY Ctr_padlock_mod	"moderne">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;'-ikon for gyldige 'om'-sider">
-<!ENTITY Ctr_icopageinfo	"Klik på ikon åbner vinduet 'Sideoplysninger'">
+<!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
 <!ENTITY Ctr_lbsbsize		"Brugerdefineret brede for adresselinje og søgelinje">
 <!ENTITY Ctr_searchbar		"Søgelinje">
 <!ENTITY Ctr_lbsugresi		"Vis så mange resultater som muligt i forslag-popup (uden rullepanel)">
