--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -245,6 +245,8 @@
 <!ENTITY Ctr_ib_graycolor	"Graue Farbe für 'Chrome'-Seiten und Seiten mit unbekannter Identität">
 <!ENTITY Ctr_verifiedcolors	"Farbig bei verifizierten Webseiten, sicheren und unsicheren Verbindungen">
 <!ENTITY Ctr_ibinfoico		"'i'-Symbol durch Globus-Symbol ersetzen">
+<!ENTITY Ctr_ibinfoico2		"'i'-Symbol verstecken (falls möglich)">
+<!ENTITY Ctr_iblabels		"Bezeichnungen verstecken">
 <!ENTITY Ctr_faviconurl		"Lesezeichensymbol (Favicon) der Webseite">
 <!ENTITY Ctr_padlock		"Schloss-Symbol bei sicheren Verbindungen">
 <!ENTITY Ctr_padlock_hid	"versteckt">
@@ -252,7 +254,7 @@
 <!ENTITY Ctr_padlock_cla	"klassisch">
 <!ENTITY Ctr_padlock_mod	"modern">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;'-Symbol für gültige 'about:'-Seiten">
-<!ENTITY Ctr_icopageinfo	"Ein Klick auf das Symbol öffnet das 'Seiteninfo'-Fenster">
+<!ENTITY Ctr_icopageinfo	"Globus-/Lesezeichen-/'i'-Symbol: 'Seiteninfo'-Fenster per Klick öffnen">
 <!ENTITY Ctr_lbsbsize		"Benutzerdefinierte Breite für die Adressleiste und die Suchleiste">
 <!ENTITY Ctr_searchbar		"Suchleiste">
 <!ENTITY Ctr_lbsugresi		"Vorschläge im Aufklappmenü ohne Bildlaufleiste anzeigen (falls möglich)">
