--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -245,6 +245,8 @@
 <!ENTITY Ctr_ib_graycolor	"Šera barwa za njeznate identitowe boki a boki chrome">
 <!ENTITY Ctr_verifiedcolors	"Tłocaškowe barwy za pśeglědane websedła, wěste a njewěste zwiski">
 <!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
+<!ENTITY Ctr_ibinfoico2		"Hide 'i'-icon (if possible)">
+<!ENTITY Ctr_iblabels		"Hide labels">
 <!ENTITY Ctr_faviconurl		"Faworitowy symbol">
 <!ENTITY Ctr_padlock		"Pytkowy symbol za wěste zwiski">
 <!ENTITY Ctr_padlock_hid	"schowany">
@@ -252,7 +254,7 @@
 <!ENTITY Ctr_padlock_cla	"klasiski">
 <!ENTITY Ctr_padlock_mod	"moderny">
 <!ENTITY Ctr_padlock_ext	"Symbol '&brandShortName;' za płaśiwe boki 'about'">
-<!ENTITY Ctr_icopageinfo	"Kliknjenje na symbol wócynja wokno 'Info wó boku">
+<!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
 <!ENTITY Ctr_lbsbsize		"Swójska šyrokosć za adresowe pólo a pytańske pólo">
 <!ENTITY Ctr_searchbar		"Pytańske pólo">
 <!ENTITY Ctr_lbsugresi		"Tak wjele wuslědkow ako móžno we wuskokujucem meniju naraźenjow pokazaá (bźez suwańskeje rědki)">
