--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -245,6 +245,8 @@
 <!ENTITY Ctr_ib_graycolor	"Γκρι χρώμα για αγνώστου ταυτότητας και «Chrome» σελίδες">
 <!ENTITY Ctr_verifiedcolors	"Χρώματα κουμπιού για επαληθευμένες ιστοσελίδες, ασφαλείς και μη ασφαλείς συνδέσεις">
 <!ENTITY Ctr_ibinfoico		"Αντικατάσταση εικονιδίου «i» με εικονίδιο υδρογείου">
+<!ENTITY Ctr_ibinfoico2		"Hide 'i'-icon (if possible)">
+<!ENTITY Ctr_iblabels		"Hide labels">
 <!ENTITY Ctr_faviconurl		"Εικονίδιο URL: τρέχον εικονίδιο τοποθεσιών">
 <!ENTITY Ctr_padlock		"Εικονίδιο «Λουκέτο» για ασφαλείς συνδέσεις">
 <!ENTITY Ctr_padlock_hid	"κρυμμένο">
@@ -252,7 +254,7 @@
 <!ENTITY Ctr_padlock_cla	"κλασικό">
 <!ENTITY Ctr_padlock_mod	"μοντέρνο">
 <!ENTITY Ctr_padlock_ext	"Εικονίδιο «&brandShortName;» για έγκυρες σελίδες «about»">
-<!ENTITY Ctr_icopageinfo	"Άνοιγμα παραθύρου «Πληροφορίες σελίδας» με κλικ στο ικονίδιο">
+<!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
 <!ENTITY Ctr_lbsbsize		"Προσαρμοσμένο εύρος γραμμών διευθύνσεων και αναζήτησης">
 <!ENTITY Ctr_searchbar		"Γραμμή αναζήτησης">
 <!ENTITY Ctr_lbsugresi		"Προβολή όσο το δυνατόν περισσότερων αποτελεσμάτων στο αναδυόμενο υποδείξεων (χωρίς γραμμή κύλισης)">
