--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -245,6 +245,8 @@
 <!ENTITY Ctr_ib_graycolor	"Couleur grise pour les pages dont l'identification est inconnue et celles du chrome">
 <!ENTITY Ctr_verifiedcolors	"Couleurs de boutons pour les sites certifiés sécurisés, les connexions sécurisées et non sécurisées">
 <!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
+<!ENTITY Ctr_ibinfoico2		"Hide 'i'-icon (if possible)">
+<!ENTITY Ctr_iblabels		"Hide labels">
 <!ENTITY Ctr_faviconurl		"Afficher le favicon dans la barre d'adresse">
 <!ENTITY Ctr_padlock		"Cadenas">
 <!ENTITY Ctr_padlock_hid	"masqué">
@@ -252,7 +254,7 @@
 <!ENTITY Ctr_padlock_cla	"classique">
 <!ENTITY Ctr_padlock_mod	"moderne">
 <!ENTITY Ctr_padlock_ext	"Icône « &brandShortName; » pour la page invalide « about »">
-<!ENTITY Ctr_icopageinfo	"Un clic sur l'icône ouvre la « page info »">
+<!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
 <!ENTITY Ctr_lbsbsize		"Hauteur personnalisée pour la barre d'adresse et la barre de recherche">
 <!ENTITY Ctr_searchbar		"Barre de recherche">
 <!ENTITY Ctr_lbsugresi		"Afficher autant de résultats que possible dans les suggestions contextuelles (sans ascenseur)">
