--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -245,6 +245,8 @@
 <!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
+<!ENTITY Ctr_ibinfoico2		"Hide 'i'-icon (if possible)">
+<!ENTITY Ctr_iblabels		"Hide labels">
 <!ENTITY Ctr_faviconurl		"Favicon">
 <!ENTITY Ctr_padlock		"Cadeado">
 <!ENTITY Ctr_padlock_hid	"Oculto">
@@ -252,7 +254,7 @@
 <!ENTITY Ctr_padlock_cla	"Clássico">
 <!ENTITY Ctr_padlock_mod	"Moderno">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
-<!ENTITY Ctr_icopageinfo	"Clicar no Ícone Abre a Janela 'Infs. da Página'">
+<!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
 <!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
 <!ENTITY Ctr_searchbar		"Search bar">
 <!ENTITY Ctr_lbsugresi		"Display as many results in suggestions popup as possible (without scrollbar)">
