--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -245,6 +245,8 @@
 <!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
+<!ENTITY Ctr_ibinfoico2		"Hide 'i'-icon (if possible)">
+<!ENTITY Ctr_iblabels		"Hide labels">
 <!ENTITY Ctr_faviconurl		"Favicon: Mevcut web siteleri simgesidir">
 <!ENTITY Ctr_padlock		"Güvenli bağlantılar için asma kilit simgesi">
 <!ENTITY Ctr_padlock_hid	"gizli">
@@ -252,7 +254,7 @@
 <!ENTITY Ctr_padlock_cla	"klasik">
 <!ENTITY Ctr_padlock_mod	"modern">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;' icon for valid 'about' pages">
-<!ENTITY Ctr_icopageinfo	"İkonlara tıklamak 'sayfa bilgisi' görüntüler">
+<!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
 <!ENTITY Ctr_lbsbsize		"Custom width for location bar and search bar">
 <!ENTITY Ctr_searchbar		"Search bar">
 <!ENTITY Ctr_lbsugresi		"Display as many results in suggestions popup as possible (without scrollbar)">
