--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -245,6 +245,8 @@
 <!ENTITY Ctr_ib_graycolor	"Сірий колір для неопізнаних та «жовтих» сторінок">
 <!ENTITY Ctr_verifiedcolors	"Кольори кнопок для перевірених вебсайтів, захищених і незахищених з’єднань">
 <!ENTITY Ctr_ibinfoico		"Поміняти «i»-іконку на глобальну іконку">
+<!ENTITY Ctr_ibinfoico2		"Hide 'i'-icon (if possible)">
+<!ENTITY Ctr_iblabels		"Hide labels">
 <!ENTITY Ctr_faviconurl		"Значок сайту">
 <!ENTITY Ctr_padlock		"Замок">
 <!ENTITY Ctr_padlock_hid	"прихований">
@@ -252,7 +254,7 @@
 <!ENTITY Ctr_padlock_cla	"класичний">
 <!ENTITY Ctr_padlock_mod	"сучасний">
 <!ENTITY Ctr_padlock_ext	"Іконка «&brandShortName;» для дійсних «Про...» сторінок">
-<!ENTITY Ctr_icopageinfo	"Клік на іконку відкриває інформаційне вікно">
+<!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
 <!ENTITY Ctr_lbsbsize		"Налаштовувана ширина для панелей рядку адреси та пошуку">
 <!ENTITY Ctr_searchbar		"Панель пошуку">
 <!ENTITY Ctr_lbsugresi		"Відображати так багато результатів пропозицій у спливаючому вікні, як це можливо (без прокручування)">
