--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -245,6 +245,8 @@
 <!ENTITY Ctr_ib_graycolor	"Gray color for unknown identity and chrome pages">
 <!ENTITY Ctr_verifiedcolors	"Button colors for verified websites, secure and not secure connections">
 <!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
+<!ENTITY Ctr_ibinfoico2		"Hide 'i'-icon (if possible)">
+<!ENTITY Ctr_iblabels		"Hide labels">
 <!ENTITY Ctr_faviconurl		"網址列顯示網站圖示">
 <!ENTITY Ctr_padlock		"鎖頭">
 <!ENTITY Ctr_padlock_hid	"隱藏">
@@ -252,7 +254,7 @@
 <!ENTITY Ctr_padlock_cla	"經典風格">
 <!ENTITY Ctr_padlock_mod	"現代風格">
 <!ENTITY Ctr_padlock_ext	"在有效的「about:」頁面顯示「&brandShortName;」圖示">
-<!ENTITY Ctr_icopageinfo	"按下圖示，則開啟「頁面資訊」視窗">
+<!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
 <!ENTITY Ctr_lbsbsize		"自訂網址列與搜尋列的寬度">
 <!ENTITY Ctr_searchbar		"搜尋列">
 <!ENTITY Ctr_lbsugresi		"儘可能地顯示更多搜尋建議 (在不出現捲軸的情況下)">
