--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -244,9 +244,9 @@
 <!ENTITY Ctr_ib_nohovcolor	"Hiirekursoriga ikooni peale minnes ära näita halli taustavärvi">
 <!ENTITY Ctr_ib_graycolor	"Hall värvus tundmatu identiteedi ja chrome-lehtede jaoks">
 <!ENTITY Ctr_verifiedcolors	"Verifitseeritud veebisaitide ning turvaliste ja ebaturvaliste ühenduste nupuvärvid">
-<!ENTITY Ctr_ibinfoico		"Asenda ikoon 'i' gloobuse ikooniga">
-<!ENTITY Ctr_ibinfoico2		"Hide 'i'-icon (if possible)">
-<!ENTITY Ctr_iblabels		"Hide labels">
+<!ENTITY Ctr_ibinfoico		"Asenda 'i'-ikoon gloobuse ikooniga">
+<!ENTITY Ctr_ibinfoico2		"Peida 'i'-ikoon (kui võimalik)">
+<!ENTITY Ctr_iblabels		"Peida tekst">
 <!ENTITY Ctr_faviconurl		"Lehe ikoon: aktiivse veebisaidi ikoon">
 <!ENTITY Ctr_padlock		"Tabaluku ikoon turvaliste ühenduste jaoks">
 <!ENTITY Ctr_padlock_hid	"peidetud">
@@ -254,7 +254,7 @@
 <!ENTITY Ctr_padlock_cla	"klassikaline">
 <!ENTITY Ctr_padlock_mod	"kaasaegne">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;i' ikoon kehtivate 'about'-lehtede jaoks">
-<!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
+<!ENTITY Ctr_icopageinfo	"Lehe/gloobuse/'i'-ikoon: nendel klõpsamine avab akna 'veebilehe teave'">
 <!ENTITY Ctr_lbsbsize		"Aadressiriba ja otsinguriba kohandatud laius">
 <!ENTITY Ctr_searchbar		"Otsinguriba">
 <!ENTITY Ctr_lbsugresi		"Näita soovituste menüüs võimalikult palju tulemusi (ilma kerimisriba näitamata)">
@@ -327,7 +327,7 @@
 <!ENTITY Ctr_fsaduration	"HTML5-sisu animatsioonid täisekraani režiimis (about:config eelistus)">
 
 <!ENTITY Ctr_toolsitem		"Menüükirje tööriistade menüüs">
-<!ENTITY Ctr_appmenuitem	"Menüükirje rakenduse menüünupu menüüs">
+<!ENTITY Ctr_appmenuitem	"Menüükirje &brandShortName;i nupu menüüs">
 <!ENTITY Ctr_contextitem	"Menüükirje tööriistaribade kontekstimenüüs">
 <!ENTITY Ctr_puictrbutton	"Nupp peamise paneeli menüüs">
 
