--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -244,9 +244,9 @@
 <!ENTITY Ctr_ib_nohovcolor	"鼠标悬停时不显示灰色">
 <!ENTITY Ctr_ib_graycolor	"未知网站标识与Chrome页面显示灰色">
 <!ENTITY Ctr_verifiedcolors	"已验证站点，安全站点和不安全站点显示不同颜色按钮">
-<!ENTITY Ctr_ibinfoico		"用地球图标替换'i'图标">
-<!ENTITY Ctr_ibinfoico2		"Hide 'i'-icon (if possible)">
-<!ENTITY Ctr_iblabels		"Hide labels">
+<!ENTITY Ctr_ibinfoico		"用地球图标替换“i”图标">
+<!ENTITY Ctr_ibinfoico2		"隐藏“i”图标(如果可能的话)">
+<!ENTITY Ctr_iblabels		"隐藏标签文本">
 <!ENTITY Ctr_faviconurl		"网站图标：当前网站图标">
 <!ENTITY Ctr_padlock		"加密连接锁图标">
 <!ENTITY Ctr_padlock_hid	"隐藏">
@@ -254,7 +254,7 @@
 <!ENTITY Ctr_padlock_cla	"经典">
 <!ENTITY Ctr_padlock_mod	"现代">
 <!ENTITY Ctr_padlock_ext	"合法的 'about' 页面显示 '&brandShortName;' 图标">
-<!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
+<!ENTITY Ctr_icopageinfo	"网站图标/地球/“i”图标: “点击” 打开 “页面信息窗口”">
 <!ENTITY Ctr_lbsbsize		"自定义地址栏和搜索栏的宽度">
 <!ENTITY Ctr_searchbar		"搜索栏">
 <!ENTITY Ctr_lbsugresi		"尽可能在建议弹出框中多显示结果 (不带滚动条)">
